[gd_scene load_steps=3 format=2]

[ext_resource path="res://tools/editor/SyncToolbox.gd" type="Script" id=1]
[ext_resource path="res://default_theme_tools.tres" type="Theme" id=2]

[node name="WindowDialog" type="WindowDialog"]
margin_right = 404.0
margin_bottom = 254.0
theme = ExtResource( 2 )
window_title = "Sync Toolbox"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 4.0
margin_right = 399.0
margin_bottom = 211.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 395.0
margin_bottom = 247.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CalculatorLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 395.0
margin_bottom = 25.0
text = "BPM Calculator"
align = 1

[node name="ResultsHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 395.0
margin_bottom = 54.0

[node name="AverageBPMLabel" type="Label" parent="MarginContainer/VBoxContainer/ResultsHBoxContainer"]
margin_right = 98.0
margin_bottom = 25.0
text = "Average BPM: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AverageBPMLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/ResultsHBoxContainer"]
margin_left = 102.0
margin_right = 176.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "0"
editable = false
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WholeBPMLabel" type="Label" parent="MarginContainer/VBoxContainer/ResultsHBoxContainer"]
margin_left = 180.0
margin_right = 317.0
margin_bottom = 25.0
text = "Nearest Whole BPM: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WholeBPMLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/ResultsHBoxContainer"]
margin_left = 321.0
margin_right = 395.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "0"
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="CalculatorButtonsHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 395.0
margin_bottom = 123.0

[node name="ClickHereButton" type="Button" parent="MarginContainer/VBoxContainer/CalculatorButtonsHBoxContainer"]
margin_right = 195.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 65 )
size_flags_horizontal = 3
text = "Tap here"

[node name="ResetButton" type="Button" parent="MarginContainer/VBoxContainer/CalculatorButtonsHBoxContainer"]
margin_left = 199.0
margin_right = 395.0
margin_bottom = 65.0
size_flags_horizontal = 3
text = "Reset"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 127.0
margin_right = 395.0
margin_bottom = 131.0

[node name="MetronomeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 395.0
margin_bottom = 160.0
text = "Metronome"
align = 1

[node name="ParamsHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 395.0
margin_bottom = 189.0

[node name="BPMLabel" type="Label" parent="MarginContainer/VBoxContainer/ParamsHBoxContainer"]
margin_right = 44.0
margin_bottom = 25.0
text = "BPM: "

[node name="BPMSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/ParamsHBoxContainer"]
margin_left = 48.0
margin_right = 191.0
margin_bottom = 25.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 1000.0
step = 0.01
value = 120.0
allow_greater = true
arrow_step = 0.5

[node name="OffsetLabel" type="Label" parent="MarginContainer/VBoxContainer/ParamsHBoxContainer"]
margin_left = 195.0
margin_right = 248.0
margin_bottom = 25.0
text = "Offset: "

[node name="OffsetSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/ParamsHBoxContainer"]
margin_left = 252.0
margin_right = 395.0
margin_bottom = 25.0
size_flags_horizontal = 3
max_value = 100000.0
allow_greater = true
suffix = "ms"

[node name="ResolutionHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 193.0
margin_right = 395.0
margin_bottom = 218.0

[node name="ResolutionLabel" type="Label" parent="MarginContainer/VBoxContainer/ResolutionHBoxContainer"]
margin_right = 109.0
margin_bottom = 25.0
text = "Note resolution: "

[node name="ResolutionSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/ResolutionHBoxContainer"]
margin_left = 113.0
margin_right = 395.0
margin_bottom = 25.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 192.0
value = 4.0
allow_greater = true
suffix = "ths of a beat"

[node name="MetronomeButtonsHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 222.0
margin_right = 395.0
margin_bottom = 247.0

[node name="ToggleMetronomeButton" type="Button" parent="MarginContainer/VBoxContainer/MetronomeButtonsHBoxContainer"]
margin_right = 195.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Enable metronome"

[node name="ApplyButton" type="Button" parent="MarginContainer/VBoxContainer/MetronomeButtonsHBoxContainer"]
margin_left = 199.0
margin_right = 395.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Copy to editor"

[connection signal="pressed" from="MarginContainer/VBoxContainer/CalculatorButtonsHBoxContainer/ClickHereButton" to="." method="_on_calculator_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CalculatorButtonsHBoxContainer/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MetronomeButtonsHBoxContainer/ToggleMetronomeButton" to="." method="_on_ToggleMetronomeButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MetronomeButtonsHBoxContainer/ApplyButton" to="." method="_on_ApplyButton_pressed"]
